fixed overflow x issue for mobile and added bottom margin to login and registration forms

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -11,4 +11,5 @@
     flex-direction: column;
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
 }
