--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -8,3 +8,7 @@
 .registerButton {
     min-width: 130px;
 }
+
+.form {
+    margin-bottom: 50px;
+}
